# Gunita

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
planning_docs/: BFAI_Roadmap.md  BFAI_Specifications.md  BFAI_Tracker.md  Chunked_Embeddings_Tracker.md  GUNITA_Roadmap.md  GUNITA_Specifications.md  GUNITA_Tracker.md  GUNITA_UI_Specifications.md
src/: BFAI-README.md
src/bfai/: __init__.py  config.py  db.py  embeddings.py  entities.py  keywords.py  loader.py  memory.py  models.py  parser.py  sync.py  vault.py  vectorstore.py  writer.py
src/gunita/: __init__.py  config.py  main.py  server.py
src/gunita/api/: __init__.py  graph.py  notes.py  router.py  search.py  stats.py  vault.py
src/gunita/static/css/: style.css
src/gunita/static/js/: app.js  (+9 more)
src/gunita/templates/: index.html
src/scripts/: agent_context.py  explorer.py  generate_sample_notes.py  ingest.py  semantic.py  watch.py
tests/: test_db.py  test_embeddings.py  test_entities.py  test_loader.py  test_memory.py  test_parser.py  test_sync.py  test_vault.py  test_vectorstore.py  test_writer.py
vault/metadata/: bfai.db
vault/notes/: argocd-gitops.md  computer-vision-robotics.md  data-visualization.md  database-design-principles.md  docker-container-deployment.md  embedded-systems-design.md  iot-sensor-networks.md  linux-server-administration.md  machine-learning-fundamentals.md  micropython-firmware.md  natural-language-processing.md  project-management-tools.md  python-project-templates.md  raspberry-pi-cluster.md  rest-api-best-practices.md  web-development-fundamentals.md
