[project]
name = "gunita"
version = "0.2.0"
description = "A local-first AI-native memory and knowledge system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "keybert>=0.9.0",
    "openai>=2.41.1",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
gui = ["PySide6>=6.5"]
web = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
    "jinja2>=3.1",
    "httpx>=0.24",
    "typer>=0.9",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
gunita = "gunita.main:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bfai*", "gunita*"]

[tool.setuptools.package-data]
gunita = [
    "templates/*.html",
    "static/css/*.css",
    "static/js/*.js",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
